--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,700;1,200;1,300;1,400;1,700&family=IBM+Plex+Sans&display=swap"
       rel="stylesheet"
     />
-    <script src=" /node_modules/animejs/lib/anime.min.js"></script>
+
+    <meta name="description" content="__META_DESCRIPTION__"/>
+    <meta name="og:title" content="__META_OG_TITLE__"/>
+    <meta name="og:description" content="__META_OG_DESCRIPTION__"/>
+    <meta name="og:image" content="__META_OG_IMAGE__"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Fred Egidi</title>
