--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,700;1,200;1,300;1,400;1,700&family=IBM+Plex+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <meta name="description" content="__META_DESCRIPTION__"/>
+    <meta name="og:title" content="Fred Egidi Portfolio"/>
+    <meta name="og:description" content="Welcome to my personal Blog and Portfolio"/>
+    <meta name="og:image" content="__META_OG_IMAGE__"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Fred Egidi</title>
