--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="__META_DESCRIPTION__"/>
     <meta name="og:title" content="Fred Egidi Portfolio"/>
     <meta name="og:description" content="Welcome to my personal Blog and Portfolio"/>
-    <meta name="og:image" content="__META_OG_IMAGE__"/>
+    <meta name="og:image" content="https://res.cloudinary.com/dqkzytqee/image/upload/f_auto,q_auto/g1rmvboptrkrhd6rsuys"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Fred Egidi</title>
