--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       rel="stylesheet"
     />
 
-    <meta name="description" content="__META_DESCRIPTION__"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
+    <meta name="description" content="Personal Blog and Portfolio"/>
     <meta name="og:title" content="Fred Egidi Portfolio"/>
     <meta name="og:description" content="Welcome to my personal Blog and Portfolio"/>
     <meta name="og:image" content="https://res.cloudinary.com/dqkzytqee/image/upload/f_auto,q_auto/g1rmvboptrkrhd6rsuys"/>
