start adding a comment box

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
           
     <meta name="description" content="Personal Blog and Portfolio"/>
-    <meta name="og:title" content="Fred Egidi Portfolio"/>
-    <meta name="og:description" content="Welcome to my personal Blog and Portfolio"/>
+    <meta name="og:title" content="Fred Egidi Full Stack Web Developer"/>
+    <meta name="og:description" content="Personal Blog and Portfolio"/>
     <meta name="og:image" content="https://res.cloudinary.com/dqkzytqee/image/upload/f_auto,q_auto/g1rmvboptrkrhd6rsuys"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Fred Egidi</title>
   </head>
   <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
