--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DSZQ03N1Q3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-DSZQ03N1Q3");
+    </script>
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,20 +26,24 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-          
-    <meta name="description" content="Personal Blog and Portfolio"/>
-    <meta name="og:title" content="Fred Egidi Full Stack Web Developer"/>
-    <meta name="og:description" content="Personal Blog and Portfolio"/>
-    <meta name="og:image" content="https://res.cloudinary.com/dqkzytqee/image/upload/f_auto,q_auto/g1rmvboptrkrhd6rsuys"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+
+    <meta name="description" content="Personal Blog and Portfolio" />
+    <meta name="og:title" content="Fred Egidi Full Stack Web Developer" />
+    <meta name="og:description" content="Personal Blog and Portfolio" />
+    <meta
+      name="og:image"
+      content="https://res.cloudinary.com/dqkzytqee/image/upload/f_auto,q_auto/g1rmvboptrkrhd6rsuys"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Fred Egidi</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
