email js abilitation

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 it's so cool you're looking at the source code! 
 this is one one of my favourite habit as well while surfing on the internet, 
 so I´m glad we have that in common.
-we should definitely keep in touch, just drop me a mail on egdfred@posteo.de
-or you can find me on linkedin-> https://www.linkedin.com/in/federicoegidi/
-or on instagram -> https://www.instagram.com/tapiwo/
+we should definitely keep in touch,  drop me a mail using the contact Section
+Cheers!
    -->
   <head>
     <meta charset="UTF-8" />
